[package]
name = "example-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.26.1" }
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
miraland-security-txt = { path = "../security-txt" }
