[package]
name = "miraland-query-security-txt"
version = "1.1.1"
edition = "2021"
description = "query-security-txt is a tool that queries smart contracts on the miraland blockchain for security.txt information"
readme = "../security-txt/README.md"
repository = "https://github.com/miraland-labs/miraland-security-txt"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
miraland-security-txt = { version = "1.1.1", path = "../security-txt", features = [
    "parser",
] }
miraland-client = "1.10.0"
miraland-sdk = "1.10.0"
