[package]
name = "miraland-security-txt"
version = "1.1.1"
edition = "2021"
description = "security-txt is a macro that helps security researchers contact you about vulnerabilities in your smart contract"
readme = "README.md"
repository = "https://github.com/miraland-labs/miraland-security-txt"
license = "MIT OR Apache-2.0"

[features]
# when no features are enabled, this crate has no dependencies. The parser requires two, but won't be used on-chain.
parser = ["thiserror", "twoway"]

[dependencies]
thiserror = { version = "1.0.50", optional = true }
twoway = { version = "=0.2.2", optional = true }
